--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.5
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0+mc1.21.x
 maven_group=com.franco227.stone_is_stone
 archives_base_name=stone-is-stone
 
